compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__inexhaustive_let_string_prefix_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  let \"_\" <> thing = \"_Hello\"\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  let "_" <> thing = "_Hello"
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑         
}


----- AFTER ACTION
public fn main() {
  let thing = case "_Hello" {
    "_" <> thing -> thing
    _ -> todo
  }
}
