compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__inner_inexhaustive_let_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main(result) {\n  let [wibble] = {\n    let Ok(wobble) = {\n      result\n    }\n    [wobble]\n  }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main(result) {
  let [wibble] = {
    let Ok(wobble) = {
    ▔▔▔▔▔▔▔▔▔▔▔▔▔↑    
      result
    }
    [wobble]
  }
}


----- AFTER ACTION
public fn main(result) {
  let [wibble] = {
    let wobble = case {
      result
    } {
      Ok(wobble) -> wobble
      Error(_) -> todo
    }
    [wobble]
  }
}
