compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__interpolate_string_inside_string.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  \"wibble wobble woo\"\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  "wibble wobble woo"
          ▔▔▔▔▔▔↑    
}


----- AFTER ACTION
public fn main() {
  "wibble " <> wobble <> " woo"
}
