compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__interpolating_string_as_first_pipeline_step_inserts_brackets.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  \"wibble wobble woo\" |> io.println\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  "wibble wobble woo" |> io.println
          ▔▔▔▔▔▔↑                  
}


----- AFTER ACTION
public fn main() {
  { "wibble " <> wobble <> " woo" } |> io.println
}
