compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__merge_case_branch_can_merge_multiple_branches.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn go(result) {\n  case result {\n    [_] -> 1\n    [Ok(value), ..] -> todo\n    [_, Error(value)] -> todo\n    [_, _, Error(value)] -> todo\n    [_, _] -> 1\n    _ -> 2\n  }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn go(result) {
  case result {
    [_] -> 1
    [Ok(value), ..] -> todo
                       ▔▔▔▔
    [_, Error(value)] -> todo
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    [_, _, Error(value)] -> todo
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
    [_, _] -> 1
    _ -> 2
  }
}


----- AFTER ACTION
public fn go(result) {
  case result {
    [_] -> 1
    [Ok(value), ..] | [_, Error(value)] | [_, _, Error(value)] -> todo
    [_, _] -> 1
    _ -> 2
  }
}
