compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__merge_case_branch_with_complex_bodies_3.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn go(n: Int) {\n  case n {\n    1 -> go(n - 1)\n    2 -> go(n - 1)\n    _ -> 10\n  }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn go(n: Int) {
  case n {
    1 -> go(n - 1)
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    2 -> go(n - 1)
▔▔▔▔↑             
    _ -> 10
  }
}


----- AFTER ACTION
public fn go(n: Int) {
  case n {
    1 | 2 -> go(n - 1)
    _ -> 10
  }
}
