compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__merge_case_branch_with_todo_keeps_the_non_todo_body.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn go(n: Int) {\n  case n {\n    1 -> todo\n    2 -> n * 2\n    3 -> todo\n    _ -> todo\n  }\n  }"
snapshot_kind: text
---
----- BEFORE ACTION
public fn go(n: Int) {
  case n {
    1 -> todo
    ▔▔▔▔▔▔▔▔▔
    2 -> n * 2
▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    3 -> todo
▔▔▔▔↑        
    _ -> todo
  }
  }


----- AFTER ACTION
public fn go(n: Int) {
  case n {
    1 | 2 | 3 -> n * 2
    _ -> todo
  }
  }
